--- a/.env_template
+++ b/.env_template
@@ -1,6 +1,7 @@
 # .env
-BAIDU_OCR_API_KEY="your_baidu_api_key_here"
-BAIDU_OCR_SECRET_KEY="your_baidu_secret_key_here"
-DEEPSEEK_API_KEY="your_deepseek_api_key_here"
-WXAUTO_API_URL="your_wxauto_api_url_here"
-WXAUTO_API_KEY="your_wxauto_api_key_here"
+BAIDU_OCR_API_KEY=your_baidu_api_key_here
+BAIDU_OCR_SECRET_KEY=your_baidu_secret_key_here
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
+WXAUTO_API_URL=your_wxauto_api_url_here
+WXAUTO_API_KEY=your_wxauto_api_key_here
+WXAUTO_DOWNLOAD_PATH=your_wxauto_download_path_here
