--- a/processor_config.json
+++ b/processor_config.json
@@ -2,7 +2,7 @@
     "chat_name_processor_config": {
       "作业识别": ["homework_processor"],
       "文件打印": ["print_processor"],
-      "王旭": ["cmd_processor", "chat_processor"],
+      "王旭": ["cmd_processor", "chat_processor", "license_processor"],
       "心颖": ["chat_processor"]
     },
     "cmd_list": [
