--- a/processor_config.json
+++ b/processor_config.json
@@ -1,5 +1,6 @@
 {
     "chat_name_processor_config": {
+      "授权生成": ["license_processor"],
       "作业识别": ["homework_processor"],
       "文件打印": ["print_processor"],
       "王旭": ["cmd_processor", "chat_processor", "license_processor"],
