--- a/processor_config.json
+++ b/processor_config.json
@@ -3,11 +3,7 @@
       "授权生成": ["license_processor"],
       "作业识别": ["homework_processor"],
       "文件打印": ["print_processor"],
-      "王旭": ["cmd_processor", "chat_processor", "license_processor"],
+      "王旭": ["license_processor", "mitv_processor", "location_processor", "chat_processor"],
       "心颖": ["chat_processor"]
-    },
-    "cmd_list": [
-      "打开电视",
-      "关闭电视"
-    ]
+    }
   }
