添加定位服务

--- a/.env_template
+++ b/.env_template
@@ -5,3 +5,6 @@ DEEPSEEK_API_KEY=your_deepseek_api_key_here
 WXAUTO_API_URL=your_wxauto_api_url_here
 WXAUTO_API_KEY=your_wxauto_api_key_here
 WXAUTO_DOWNLOAD_PATH=your_wxauto_download_path_here
+MITV_IP=your_mitv_ip_here
+PRINTER_NAME=your_printer_name_here
+AMAP_API_KEY=your_amap_api_key_here
