添加定位能力

--- a/.env_template
+++ b/.env_template
@@ -8,3 +8,7 @@ WXAUTO_DOWNLOAD_PATH=your_wxauto_download_path_here
 MITV_IP=your_mitv_ip_here
 PRINTER_NAME=your_printer_name_here
 AMAP_API_KEY=your_amap_api_key_here
+QB_LOCATION_URL=your_location_url
+QB_LOCATION_AUTHORITY=your_location_url
+QB_LOCATION_USERNAME=your_username
+QB_LOCATION_PASSWORD=your_password
