env添加数据库路径配置

--- a/.env_template
+++ b/.env_template
@@ -12,3 +12,4 @@ QB_LOCATION_URL=your_location_url
 QB_LOCATION_AUTHORITY=your_location_url
 QB_LOCATION_USERNAME=your_username
 QB_LOCATION_PASSWORD=your_password
+SQLLITE_DB_PATH=your_sqllite_db_path_here
