--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+fastapi==0.120.4
 img2pdf==0.6.1
+matplotlib==3.10.7
+numpy==2.3.4
+opencv_python==4.12.0.88
 Pillow==12.0.0
 pycups==2.0.4
 pydantic==2.12.3
 Requests==2.32.5
+uvicorn==0.38.0
+zhdate==1.0
