--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+beautifulsoup4==4.14.2
+docx==0.2.4
 fastapi==0.120.4
 img2pdf==0.6.1
 matplotlib==3.10.7
@@ -6,6 +8,7 @@ opencv_python==4.12.0.88
 Pillow==12.0.0
 pycups==2.0.4
 pydantic==2.12.3
+pypandoc==1.16.2
 Requests==2.32.5
 uvicorn==0.38.0
 zhdate==1.0
