add dsm door log detect

--- a/.env_template
+++ b/.env_template
@@ -12,6 +12,7 @@ QB_LOCATION_URL=your_location_url
 QB_LOCATION_AUTHORITY=your_location_url
 QB_LOCATION_USERNAME=your_username
 QB_LOCATION_PASSWORD=your_password
+DSM_TOKEN=your_dsm_token_here
 SQLLITE_DB_PATH=your_sqllite_db_path_here
 OPEN_DOOR_KEY=your_open_door_key_here
 OPEN_DOOR_LOCATION=your_open_door_location_here
